tests/machine/x/hs/group_by_conditional_sum.error

tests/machine/x/hs/group_by_conditional_sum.hs:179:1: error:
    Multiple declarations of ‘items’
    Declared at: tests/machine/x/hs/group_by_conditional_sum.hs:42:37
                 tests/machine/x/hs/group_by_conditional_sum.hs:179:1
    |
179 | items = [Map.fromList [("cat", VString ("a")), ("val", VInt (10)), ("flag", VBool (True))], Map.fromList [("cat", VString ("a")), ("val", VInt (5)), ("flag", VBool (False))], Map.fromList [("cat", VString ("b")), ("val", VInt (20)), ("flag", VBool (True))]]
    | ^^^^^
